# hackathon_vol.6

./: README.md  package-lock.json  package.json
FastAPI/: Dockerfile  Readme.MD  docker-compose.yaml  pyproject.toml
FastAPI/api/: __init__.py  db.py  main.py  migrate_db.py
FastAPI/api/cruds/: done.py  task.py
FastAPI/api/models/: task.py
FastAPI/api/routers/: done.py  task.py
FastAPI/api/schemas/: done.py  task.py
FastAPI/tests/: test_main.py
src/: App.js  index.css  screen1.css  screen1.js  screen2.css  screen2.js
